--- a/src/app/word-list/word-list.component.css
+++ b/src/app/word-list/word-list.component.css
@@ -1,13 +1,13 @@
 .kontent{
-    padding:16px;
+    padding:1rem;
 }
 .spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
     stroke: darkgrey;
 }
 
 .spinner{
-    width: 100px;
-    height: 100px;
+    width: 6.25rem;
+    height: 6.25rem;
     position: absolute;
     top:0;
     bottom: 0;
@@ -25,11 +25,12 @@ p {
   }
   
   .example-card {
-    width: 350px;
-    margin: 10px;
-    height:185px;
-    border-radius: 10px;
-    margin-left:60px;
+    width: 21.875rem;
+    margin-right: 0.3125rem;
+    margin-bottom: 1rem;
+    height: 11.563rem;
+    border-radius: 0.625rem;
+    margin-left: 3.75rem;
     background-color: #FFFEF2;
   }
   
@@ -37,7 +38,7 @@ p {
       position:absolute;
       right:0;
       top:0;
-      margin:12px;
+      margin:0.75rem;
   }
   
   ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
