--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -1,19 +1,23 @@
 <a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
 
 <div class="kontent">
-    <div fxLayout="row wrap" fxLayoutGap="35px">
+  <div fxLayout="row wrap" fxLayoutGap="35px">
     <div class="spinner">
-        <mat-spinner *ngIf="!hasLoaded"></mat-spinner>
+      <mat-spinner *ngIf="!response"></mat-spinner>
     </div>
-    <div *ngIf="hasLoaded"  fxLayout="row wrap">
-        <div *ngFor="let w of response">
-            <p (click)="showDefinition[w.id] = !showDefinition[w.id]" class="card">
-                <a>{{w.word}}</a>
-            </p>
-            <div *ngIf="showDefinition[w.id]" class="definition">
-                <p style="background-color: #FFFEF2;width: 200px;color: gray;height: 40px; border-radius: 10px; margin: 15px;font-size: 14px;">{{w.definition}}</p>
-            </div>
+    
+    <div *ngIf="hasLoaded" fxLayout="row wrap">
+      <div *ngFor="let w of paginatedResponse">
+        <div (click)="showDefinition[w.id] = !showDefinition[w.id]" class="card">
+          <p style="font-size: 20px;">{{w.word}}</p>
+          <div *ngIf="showDefinition[w.id]" class="definition">
+            <p style="color:red"><i>{{w.definition}}</i></p>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
+  <div class="paginator" *ngIf="hasLoaded && response">
+    <mat-paginator class="paginator"  [length]="response.length" [pageSize]="itemsPerPage"   [pageSizeOptions]="[40,45,54,63,72,90]" (page)="onPageChange($event)" showFirstLastButtons></mat-paginator>
+  </div>
 </div>
