--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -8,6 +8,7 @@
          -->
          <div fxLayout="row wrap" fxLayoutGap="35px">
             <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
+            <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
             <a class="home" mat-flat-button routerLink="quiz"><span class="material-icons" style="color: gray;">alarm_on</span></a>
             <p style="font-size: 30px; color: greenyellow; position: absolute; top: 20px; right:80px; margin-right: 10px;" *ngIf="totalLearntLoaded">{{totalLearnt}}/1067</p>
         </div>
