--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -21,7 +21,8 @@
                 <mat-card-header class="header">
                     <mat-card-title><a href="https://www.dictionary.com/browse/{{element.word}}" target="_blank">{{element.word}}</a> <i> ({{element.pos}})</i></mat-card-title>
                     <mat-card-subtitle class="sub">{{element.definition}}</mat-card-subtitle>
-                    <div class="check-box"><mat-checkbox [checked]="element.learnt"  (change)="toggle(element,$event)"></mat-checkbox></div>
+                    <!-- <div class="check-box"><mat-checkbox [checked]="element.learnt"  (change)="toggle(element,$event)"></mat-checkbox></div> -->
+                    <div class="check-box"><mat-checkbox [checked]="getCheckboxStatus(element.id)"  (change)="onCheckboxChange(element.id, $event.checked)"></mat-checkbox></div>
                 </mat-card-header>
                 <hr>
                 <mat-card-content class="content">
