--- a/src/app/randomword/randomword.component.html
+++ b/src/app/randomword/randomword.component.html
@@ -5,8 +5,8 @@
         <mat-card-header class="header">
           <mat-card-title><a href="https://www.dictionary.com/browse/{{response.word}}" target="_blank">{{response.word}}</a><i> ({{response.pos}})</i></mat-card-title>
           <mat-card-subtitle class="sub">{{response.definition}}</mat-card-subtitle>
-          <div class="check-box"><mat-checkbox [checked]="response.learnt" (change)="toggle(response,$event)"></mat-checkbox></div>
-          <a class="report-problem" mat-flat-button (click)="reportedId()"><span class="material-icons" style="color:red;font-size:23px;">report_problem</span></a>
+          <div class="check-box"><mat-checkbox [checked]="response.learnt" (change)="toggle(response,$event)"></mat-checkbox></div> <!-- change checked and change functions to use local browser memory -->
+          <!-- <a class="report-problem" mat-flat-button (click)="reportedId()"><span class="material-icons" style="color:red;font-size:23px;">report_problem</span></a> -->
         </mat-card-header>
         <hr>
         <mat-card-content class="content">
