--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -6,12 +6,24 @@
     <mat-sidenav-content>
        <mat-icon (click)="opened=!opened" style="color:#FFFEF2">view_sidebar</mat-icon>
          -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9068354391591857"
+         crossorigin="anonymous"></script>
+    <!-- horizontal-AU -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9068354391591857"
+         data-ad-slot="2439223512"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
          <div fxLayout="row wrap" fxLayoutGap="35px">
             <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
             <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
             <a class="home" mat-flat-button routerLink="quiz"><span class="material-icons" style="color: gray;">alarm_on</span></a>
             <!-- <a class="home" mat-flat-button routerLink="support"><span class="material-icons" style="color: white;">qr_code_scanner</span></a> -->
-            <p style="font-size: 30px; color: greenyellow; position: absolute; top: 20px; right:80px; margin-right: 10px;" *ngIf="totalLearntLoaded">{{totalLearnt}}/1067</p>
+            <p style="font-size: 30px; color: greenyellow; position: absolute; top: 20px; right:80px; margin-right: 10px;">{{totalLearntLBM}}/1067</p>
         </div>
         
         <div class="content" *ngIf="loaded"> 
