--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -1,3 +1,16 @@
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9068354391591857"
+         crossorigin="anonymous"></script>
+    <!-- horizontal-AU -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9068354391591857"
+         data-ad-slot="2439223512"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <div class=" score sticky" *ngIf="model.length && loaded"><p>{{totalLearnt}}/{{model.length}}</p></div>
 
 <a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
