forkjoin to fix Issue: Quickreview Pagination

--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -3,7 +3,7 @@
 <div class="kontent">
   <div fxLayout="row wrap" fxLayoutGap="35px">
     <div class="spinner">
-      <mat-spinner *ngIf="!responseLBM"></mat-spinner>
+      <mat-spinner *ngIf="!hasLoaded"></mat-spinner>
     </div>
     
     <div *ngIf="hasLoaded" fxLayout="row wrap">
