--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -2,7 +2,7 @@
 <div fxLayout="row wrap" fxLayoutGap="35px">
     <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
     <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
-    <a class="home" mat-flat-button routerLink="quiz"><span class="material-icons" style="color: gray;">alarm_on</span></a>
+    <a class="home" mat-flat-button routerLink=""><span class="material-icons" style="color: gray;">alarm_on</span></a>
     <!-- <a class="home" mat-flat-button routerLink="support"><span class="material-icons" style="color: white;">qr_code_scanner</span></a> -->
     <p style="font-size: 30px; color: greenyellow; position: absolute; top: 20px; right:80px; margin-right: 10px;">{{totalLearntLBM}}/1067</p>
 </div>
