--- a/src/app/word-list/word-list.component.css
+++ b/src/app/word-list/word-list.component.css
@@ -91,3 +91,36 @@ p {
   .material-icons {
     font-size: 45px;
   }
+
+.word-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  font-size: 32px;
+}
+
+.mat-slide-toggle{
+  top: 5;
+  right:50%;
+}
+
+:host ::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: #66ff00 ;
+}
+
+:host ::ng-deep  .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #FFFEF2 ;
+}
+
+:host ::ng-deep .mat-slide-toggle.mat-disabled .mat-slide-toggle-bar {
+  background-color: red; 
+}
+
+:host ::ng-deep .mat-slide-toggle.mat-disabled .mat-slide-toggle-thumb {
+  background-color: red; 
+}
+.mat-slide-toggle {
+  transform: scale(1.2);
+}
