--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -1,7 +1,7 @@
 <div class=" score sticky" *ngIf="model.length && loaded"><p>{{totalLearnt}}/{{model.length}}</p></div>
 
 <a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
-
+<mat-slide-toggle [checked]="showDefinition" (change)="toggleShowDefinition()" class="mat-slide-toggle sticky" ></mat-slide-toggle>
 <div class="kontent">
     <div fxLayout="row wrap" fxLayoutGap="35px">
 
@@ -18,19 +18,26 @@
         <!-- flashcard -->
         <div  *ngFor="let element of model" fxLayout="row wrap">
             <mat-card *ngIf="element" class="example-card mat-elevation-z5">
-                <mat-card-header class="header">
-                    <mat-card-title><a href="https://www.dictionary.com/browse/{{element.word}}" target="_blank">{{element.word}}</a> <i> ({{element.pos}})</i></mat-card-title>
-                    <mat-card-subtitle class="sub">{{element.definition}}</mat-card-subtitle>
-                    <!-- <div class="check-box"><mat-checkbox [checked]="element.learnt"  (change)="toggle(element,$event)"></mat-checkbox></div> -->
+                <ng-container *ngIf="showDetails">
+                    <mat-card-header class="header">
+                        <mat-card-title><a href="https://www.dictionary.com/browse/{{element.word}}" target="_blank">{{element.word}}</a> <i> ({{element.pos}})</i></mat-card-title>
+                        <mat-card-subtitle class="sub">
+                            <ng-container *ngIf="showDefinition">
+                                {{element.definition}}
+                            </ng-container>
+                        </mat-card-subtitle>
+                        <div class="check-box"><mat-checkbox [checked]="getCheckboxStatus(element.id)"  (change)="onCheckboxChange(element.id, $event.checked)"></mat-checkbox></div>
+                    </mat-card-header>
+                    <hr>
+                    <mat-card-content class="content">
+                        Example : {{element.example}}
+                    </mat-card-content>
+            </ng-container>
+            <ng-container *ngIf="!showDetails">
+                    <p class="word-center"><b><i>{{element.word}}</i></b></p>
                     <div class="check-box"><mat-checkbox [checked]="getCheckboxStatus(element.id)"  (change)="onCheckboxChange(element.id, $event.checked)"></mat-checkbox></div>
-                </mat-card-header>
-                <hr>
-                <mat-card-content class="content">
-                    Example : {{element.example}}
-                </mat-card-content>
+            </ng-container>
             </mat-card> 
         </div>
     </div>
-    
-<!-- <button (click)="openDialog()">2EZ</button> -->
 </div>
