added all words filter & func for not learnt words

--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -1,10 +1,13 @@
 <div class=" score sticky" *ngIf="model.length && loaded"><p>{{totalLearnt}}/{{model.length}}</p></div>
 
-<a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
+<a class="home" mat-flat-button routerLink="/tool"><span class="material-icons">abc</span></a>
 
 <div class="toggle-container">
     <mat-slide-toggle [checked]="showDefinition" (change)="toggleShowDefinition()" class="mat-slide-toggle ">Definition</mat-slide-toggle>
     <mat-slide-toggle [checked]="learntFilter" (change)="showLearnt()" class="mat-slide-toggle ">Learnt</mat-slide-toggle>
+    <!-- <input type="checkbox" id="all" name="all" value="All" style="transform: scale(1.8);" [checked]="allChecked" (change)="showLearnt()">
+    <a for="all"> All</a> -->
+    <mat-checkbox [checked]="allChecked" (change)="showAll()"  class="mat-slide-toggle ">All</mat-checkbox>
 </div>
   
 <div class="kontent">
