--- a/src/styles.css
+++ b/src/styles.css
@@ -10,4 +10,4 @@ body {
   background-color: #152238;
 }
 
-.background-primary { background-color: #152238; }
+/* .background-primary { background-color: #152238; } */
