--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -1,42 +1,64 @@
+<mat-sidenav-container fullscreen style="background-color: #152238">
+    <!-- <mat-sidenav #sidenav opened="true" mode="side" style="background-color:grey">
+        <mat-nav-list >
+            <mat-list-item></mat-list-item>
+            <mat-list-item>
+                <a mat-flat-button routerLink="quickreview" style="transform: scale(1.4); background-color: grey;"><span class="material-icons">bolt</span></a>
+            </mat-list-item><mat-list-item></mat-list-item>
 
-<div fxLayout="row wrap" fxLayoutGap="35px">
-    <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
-    <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
+            <mat-list-item>
+                <a mat-flat-button routerLink="random" style="transform: scale(1.4); background-color: grey;"><span class="material-icons">shuffle</span></a>
+            </mat-list-item><mat-list-item></mat-list-item>
 
-    <!-- <a class="home" mat-flat-button routerLink=""><span class="material-icons" style="color: gray;">alarm_on</span></a> -->
-    <!-- <a class="home" mat-flat-button (click)="toggleSearch()"><span class="material-icons" style="color: whitesmoke">search</span></a> -->
-    <!-- <div *ngIf="showSearch" class="search-box">
-        <input type="text" placeholder="Search..." />
-      </div> -->
+            <mat-list-item>
+                <a mat-flat-button routerLink="quickreview" style="transform: scale(1.4); background-color: grey;"><span class="material-icons">cloud_sync</span></a>
+            </mat-list-item>
+        </mat-nav-list>
+      </mat-sidenav> -->
 
-      <!-- <mat-form-field>
-        <input type="text" matInput [formControl]="searchControl" placeholder="Search">
-        <mat-autocomplete [displayWith]="displayFn">
-          <mat-option *ngFor="let word of filteredWords | async" [value]="word">
-            {{ displayFn(word) }}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field> -->
-    <!-- <a class="home" mat-flat-button routerLink="support"><span class="material-icons" style="color: white;">qr_code_scanner</span></a> -->
-    <p style="font-size: 30px; color: greenyellow; position: absolute; top: 20px; right:80px; margin-right: 10px;">{{totalLearntLBM}}/1067</p>
-</div>
-
-<div class="content" *ngIf="loaded"> 
-    <ng-container *ngFor="let letter of letters">
-        <mat-spinner *ngIf="!hasLoaded.get(letter)"></mat-spinner>
-        <div class="card" *ngIf="hasLoaded.get(letter) && (letter!=='X' && letter!=='Y')">
+      <mat-sidenav-content>
+        <router-outlet></router-outlet>
+      <mat-toolbar color="primary" class="custom-toolbar sticky">
+        
+        <!-- <button mat-icon-button>
+            <mat-icon (click)="sidenav.toggle();">menu</mat-icon>
+        </button>  -->
+        <span class="material-icons">info</span>
+        <span style="margin-left: 10px;">VocabCards</span>
+        <div class="spacer"></div>
+        <span class="middle-text">{{totalLearntLBM}}/1067</span> 
+        <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
+        <button mat-button><span class="material-icons">search</span></button>
+        <button mat-button><span class="material-icons">bolt</span></button>
+        <button mat-button><span class="material-icons">shuffle</span></button>
+        <button mat-button (click)="openDialog()"><span class="material-icons">cloud_sync</span></button>
+        <button mat-button><span class="material-icons">person</span></button>
+        
+      </mat-toolbar>
+  
+      <div fxLayout="row wrap" fxLayoutGap="35px">
+        <!-- Other content here... -->
+      </div>
+  
+      <div class="content" *ngIf="loaded"> 
+        <ng-container *ngFor="let letter of letters">
+          <mat-spinner *ngIf="!hasLoaded.get(letter)"></mat-spinner>
+          <div class="card" *ngIf="hasLoaded.get(letter) && (letter!=='X' && letter!=='Y')">
             <a routerLink="/flashcards/letter/{{letter}}" mat-flat-button>
-                <p>
-                    <app-letter [letter]="letter" [percentage]="map.get(letter)"></app-letter>
-                </p>
+              <p>
+                <app-letter [letter]="letter" [percentage]="map.get(letter)"></app-letter>
+              </p>
             </a>
-        </div>
-        <div class="card" *ngIf="letter=='X' || letter=='Y'">
+          </div>
+          <div class="card" *ngIf="letter=='X' || letter=='Y'">
             <a (click)="openDialog()" mat-flat-button>
-                <p>
-                    <app-letter [letter]="letter" [percentage]="map.get(letter)"></app-letter>
-                </p>
+              <p>
+                <app-letter [letter]="letter" [percentage]="map.get(letter)"></app-letter>
+              </p>
             </a>
-        </div>
-    </ng-container>
-</div>
+          </div>
+        </ng-container>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+  
