--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -1,6 +1,22 @@
+
+<mat-sidenav-container fullscreen style="background-color: #152238">
+    <mat-toolbar color="primary" class="custom-toolbar sticky">
+        <span>VocabCards</span>
+        <div class="spacer"></div>
+        <button  mat-button routerLink="quickreview">Quickreview</button>
+        <button  mat-button routerLink="random">Random</button>
+        <button  mat-button>Sync</button>
+        <button  mat-button>Search</button>
+    
+        <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
+    
+        <!-- <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
+        <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
+        <a class="home" mat-flat-button><span class="material-icons" style="color: whitesmoke;">cloud_sync</span></a> -->
+    </mat-toolbar>
 <div class=" score sticky" *ngIf="model.length && loaded"><p>{{totalLearnt}}/{{model.length}}</p></div>
 
-<a class="home" mat-flat-button routerLink="/tool"><span class="material-icons">abc</span></a>
+<a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
 
 <div class="toggle-container">
     <mat-slide-toggle [checked]="showDefinition" (change)="toggleShowDefinition()" class="mat-slide-toggle ">Definition</mat-slide-toggle>
