--- a/src/app/utils/sync/sync.component.html
+++ b/src/app/utils/sync/sync.component.html
@@ -1,1 +1,20 @@
-<p>sync works!</p>
+<div class="nowords-card">
+    <button class="close" mat-button (click)="closeDialog()">
+        <mat-icon>close</mat-icon>
+    </button>
+    <button mat-flat-button (click)="copyProgress()">
+        Copy Progress
+        <span class="material-icons">
+            content_copy
+        </span>
+    </button>
+    <br>
+    <br>
+    <br>
+
+    <textarea rows="8" cols="50" [(ngModel)]="textareaValue" placeholder="Paste the progress on another device"></textarea>
+
+    <div class="sync-button-container">
+        <a mat-flat-button color="primary" (click)="syncProgress()">Sync</a>
+    </div>
+</div>
