--- a/src/app/letter-list/letter-list.component.css
+++ b/src/app/letter-list/letter-list.component.css
@@ -11,7 +11,8 @@ body{
     color:pink;
     /* margin-right: 0.188rem;
     margin-left: 0;
-    margin-bottom: 0.625rem; */
+    margin-bottom: 0.625rem;
+    f3f1d7 */
 }
 p{
     font-size: 3.125rem;
@@ -123,6 +124,7 @@ a{
     position: sticky;
     top: 0;
     z-index: 100; 
+    /* 004D6A */
 }
 
 .mat-progress-spinner circle, .mat-spinner circle {
