--- a/src/app/utils/sync/sync.component.css
+++ b/src/app/utils/sync/sync.component.css
@@ -6,12 +6,9 @@ p{
    
     height:300px;
     width: 500px;
-    border-radius: 100px;
-    margin: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    border-radius: 5px;
     position: relative;
+    /* background-color: #152238; */
 }
 
 
@@ -32,13 +29,14 @@ p{
 }
 
 .copy-button{
-    margin: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    position: absolute;
+    background-color: grey;
+    color: white;
 }
 
 .sync-button-container {
     margin-top: auto; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
 }
