--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -1,12 +1,14 @@
 
-<mat-sidenav-container fullscreen style="background-color: #152238">
-    <mat-toolbar color="primary" class="custom-toolbar sticky">
-        <span>VocabCards</span>
+<mat-sidenav-container fullscreen style="background-color: #c3c8bb">
+    <mat-toolbar color="primary" class="custom-toolbar sticky mat-elevation-z5">
+        <button mat-button><span class="material-icons" routerLink="" style="font-size: 45px;">abc</span></button>
+        <span style="margin-left: 10px;">VocabCards</span>
         <div class="spacer"></div>
-        <button  mat-button routerLink="quickreview">Quickreview</button>
-        <button  mat-button routerLink="random">Random</button>
-        <button  mat-button>Sync</button>
-        <button  mat-button>Search</button>
+        <span class="middle-text"  *ngIf="model.length && loaded">{{totalLearnt}}/{{model.length}}</span> 
+        <button mat-button><span class="material-icons">search</span></button>
+        <button mat-button routerLink="quickreview"><span class="material-icons">bolt</span></button>
+        <button mat-button routerLink="random"><span class="material-icons">shuffle</span></button>
+        <button mat-button><span class="material-icons">person</span></button>
     
         <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
     
@@ -14,10 +16,6 @@
         <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
         <a class="home" mat-flat-button><span class="material-icons" style="color: whitesmoke;">cloud_sync</span></a> -->
     </mat-toolbar>
-<div class=" score sticky" *ngIf="model.length && loaded"><p>{{totalLearnt}}/{{model.length}}</p></div>
-
-<a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
-
 <div class="toggle-container">
     <mat-slide-toggle [checked]="showDefinition" (change)="toggleShowDefinition()" class="mat-slide-toggle ">Definition</mat-slide-toggle>
     <mat-slide-toggle [checked]="learntFilter" (change)="showLearnt(false)" class="mat-slide-toggle ">Learnt</mat-slide-toggle>
