--- a/src/app/letter-list/letter-list.component.css
+++ b/src/app/letter-list/letter-list.component.css
@@ -147,16 +147,53 @@ a{
     margin-top: 0.875rem;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 0.75rem;
   }
   
   .search-box input {
     padding: 0.313rem;
     border: 0.063rem solid #ccc;
-    border-radius: 0.938rem;
+    border-radius: 1.1rem;
     width: 18.75rem;
     height: 1.875rem;
     font-family: 'Lato', sans-serif;
+    /* font-family: Arial, sans-serif;  */
+    font-size: 16px;
   }
+
+/* Style the suggestions container */
+/* Style the suggestions container */
+.suggestions {
+    position: absolute;
+    top: 3.2rem; /* Adjusted to align below the search box */
+    right: 0;
+    margin-right: 275px;
+    width: 18.75rem;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 1.1rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow-y: auto;
+    z-index: 1;
+  }
+  
+  /* Style individual suggestion items */
+  .suggestions .suggestion {
+    padding: 0.313rem;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color:black;
+  }
+  
+  /* Style the selected suggestion item on hover */
+  .suggestions .suggestion:hover {
+    background-color: #f0f0f0;
+  }
+  
+  
 
 .popup{
     background-color: black;
