--- a/src/app/letter-list/letter-list.component.html
+++ b/src/app/letter-list/letter-list.component.html
@@ -34,14 +34,13 @@
             type="text"
             [(ngModel)]="userInput"
             placeholder="Search..."
-            (blur)="toggleSearch()"
             (input)="filterSuggestions()"
           />
         </div>
         
         <div *ngIf="suggestions.length > 0" class="suggestions">
           <div *ngFor="let suggestion of suggestions" class="suggestion">
-            {{ suggestion }}
+            <a routerLink="flashcards/letter/{{suggestion.charAt(0)}}" style=" text-decoration: none; color: black;">{{ suggestion }}</a>
           </div>
         </div>
 
