--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -1,23 +1,40 @@
-<a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
+<mat-sidenav-container fullscreen style="background-color: #c3c8bb">
+  <mat-toolbar color="primary" class="custom-toolbar sticky mat-elevation-z5">
+      <button mat-button><span class="material-icons" routerLink="" style="font-size: 45px;">abc</span></button>
+      <span style="margin-left: 10px;">VocabCards</span>
+      <div class="spacer"></div>
+      <!-- <button mat-button><span class="material-icons">search</span></button> -->
+      <!-- <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button> -->
+      <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
+      <button mat-button><span class="material-icons">person</span></button>
+  
+      <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
+  
+      <!-- <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
+      <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
+      <a class="home" mat-flat-button><span class="material-icons" style="color: whitesmoke;">cloud_sync</span></a> --> 
+      
+  </mat-toolbar>
 
-<div class="kontent">
-  <div fxLayout="row wrap" fxLayoutGap="35px">
-    <div class="spinner">
-      <mat-spinner *ngIf="!hasLoaded"></mat-spinner>
-    </div>
-    
-    <div *ngIf="hasLoaded" fxLayout="row wrap">
-      <div *ngFor="let w of paginatedResponse">
-        <div (click)="showDefinition[w.id] = !showDefinition[w.id]" class="card">
-          <p *ngIf="!showDefinition[w.id]" style="font-size: 20px;">{{w.word}}</p>
-          <div *ngIf="showDefinition[w.id]" class="definition">
-            <p style="color:red"><i>{{w.definition}}</i></p>
+  <div class="kontent">
+    <div fxLayout="row wrap" fxLayoutGap="35px">
+      <div class="spinner">
+        <mat-spinner *ngIf="!hasLoaded"></mat-spinner>
+      </div>
+      
+      <div *ngIf="hasLoaded" fxLayout="row wrap">
+        <div *ngFor="let w of paginatedResponse">
+          <div (click)="showDefinition[w.id] = !showDefinition[w.id]" class="card mat-elevation-z5">
+            <p *ngIf="!showDefinition[w.id]" style="font-size: 20px;">{{w.word}}</p>
+            <div *ngIf="showDefinition[w.id]" class="definition">
+              <p style="color:red"><i>{{w.definition}}</i></p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="paginator" *ngIf="hasLoaded && responseLBM">
+      <mat-paginator class="paginator"  [length]="responseLBM.length" [pageSize]="itemsPerPage"   [pageSizeOptions]="[40,45,48,54,63,72,90]" (page)="onPageChange($event)" showFirstLastButtons></mat-paginator>
+    </div>
   </div>
-  <div class="paginator" *ngIf="hasLoaded && responseLBM">
-    <mat-paginator class="paginator"  [length]="responseLBM.length" [pageSize]="itemsPerPage"   [pageSizeOptions]="[40,45,54,63,72,90]" (page)="onPageChange($event)" showFirstLastButtons></mat-paginator>
-  </div>
-</div>
+  
