--- a/src/app/randomword/randomword.component.css
+++ b/src/app/randomword/randomword.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .content {
@@ -45,17 +45,32 @@
 }
 
 .refresh{
-    background-color:#152238;
+    background-color:#004D6A;
     color:#FFFEF2;
     position: absolute;
     bottom: 6rem;
     margin: 0.75rem;
+    margin-bottom: 100px;
+    width: 40px;
+    height: 40px;
+    /* background-color:#c3c8bb ; */
 }
 
 .home{
     background-color:#152238;
     color:#FFFEF2;
 }
-.material-icons {
-    font-size: 45px;
+
+
+.custom-toolbar {
+  background-color:#004D6A; /* Set the background color you want */
+  position: sticky;
+  top: 0;
+  z-index: 100; 
 }
+
+
+.spacer{
+  flex: 1 1 auto;
+}
+
