--- a/src/app/randomword/randomword.component.html
+++ b/src/app/randomword/randomword.component.html
@@ -1,5 +1,24 @@
-<a class="home" mat-flat-button routerLink=""><span class="material-icons">abc</span></a>
-<div class="container">
+
+<mat-sidenav-container fullscreen style="background-color: #c3c8bb">
+  <mat-toolbar color="primary" class="custom-toolbar sticky mat-elevation-z5">
+      <button mat-button><span class="material-icons" routerLink="" style="font-size: 45px;">abc</span></button>
+      <span style="margin-left: 10px;">VocabCards</span>
+      <div class="spacer"></div>
+      <!-- <button mat-button><span class="material-icons">search</span></button> -->
+      <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
+      <!-- <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button> -->
+      <button mat-button><span class="material-icons">person</span></button>
+  
+      <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
+  
+      <!-- <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
+      <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
+      <a class="home" mat-flat-button><span class="material-icons" style="color: whitesmoke;">cloud_sync</span></a> -->
+     
+      
+  </mat-toolbar>
+
+  <div class="container">
     <div *ngIf="loaded && response" class="random-word-card">
       <mat-card *ngIf="response" class="example-card mat-elevation-z5">
         <mat-card-header class="header">
@@ -14,7 +33,6 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <a class="refresh" mat-flat-button (click)="reloadPage()" ><span class="material-icons">refresh</span></a>
+    <a class="refresh mat-elevation-z5" mat-flat-button (click)="reloadPage()" ><span class="material-icons" style="font-size: 30px;">refresh</span></a>
     <br>
   </div>
-  
