--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -6,8 +6,8 @@
         <div class="spacer"></div>
         <span class="middle-text"  *ngIf="model.length && loaded">{{totalLearnt}}/{{model.length}}</span> 
         <button mat-button><span class="material-icons">search</span></button>
-        <button mat-button routerLink="quickreview"><span class="material-icons">bolt</span></button>
-        <button mat-button routerLink="random"><span class="material-icons">shuffle</span></button>
+        <button mat-button routerLink="/quickreview"><span class="material-icons">bolt</span></button>
+        <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
         <button mat-button><span class="material-icons">person</span></button>
     
         <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
