--- a/src/app/word-list/word-list.component.css
+++ b/src/app/word-list/word-list.component.css
@@ -175,3 +175,15 @@ p {
   z-index: 100; 
 }
 
+.all-learnt{
+  width: 12.25rem;
+  height: 6.25rem;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transform: scale(1.2);
+  color: #004D6A;
+}
