--- a/src/app/learnt-words/learnt-words.component.html
+++ b/src/app/learnt-words/learnt-words.component.html
@@ -8,7 +8,7 @@
       <button mat-button routerLink="/random"><span class="material-icons">shuffle</span></button>
       <button mat-button><span class="material-icons">person</span></button>
   
-      <!-- <button mat-button>{{totalLearntLBM}}/1067</button> -->
+      <button mat-button>1067</button>
   
       <!-- <a class="home" mat-flat-button routerLink="quickreview"><span class="material-icons">bolt</span></a>
       <a class="home" mat-flat-button routerLink="random"><span class="material-icons">shuffle</span></a>
