--- a/src/app/letter-list/letter-list.component.css
+++ b/src/app/letter-list/letter-list.component.css
@@ -127,10 +127,6 @@ a{
     /* 004D6A */
 }
 
-.mat-progress-spinner circle, .mat-spinner circle {
-    stroke: darkgrey!important;
-}
-
 /* .spinner{
     width: 6.25rem;
     height: 6.25rem;
@@ -139,9 +135,27 @@ a{
     bottom: 0;
     left: 0;
     right: 0;
-    
     margin: auto;
 } */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
+    z-index: 999;  */
+}
+
+.overlay ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+    stroke: #004D6A;
+  }
+
 
 .search-box {
     margin-top: 0.875rem;
